Refactor http client factory